--- a/client/src/styles/registry/registryItem.css
+++ b/client/src/styles/registry/registryItem.css
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
 }
 
-.card {
+.registry-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,15 +14,12 @@
   width: 100%;
   padding: 2vw;
   margin: 1vw;
+  border: black solid 1px;
 }
 
-.card img {
+.registry-card .registry-img {
   max-width: 255px;
   max-height: 70px;
-}
-
-.store-container {
-  border: black solid 1px;
 }
 
 .btn-store {
